<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E9E9E9"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPokemon"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/app_name"
                     />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tipoText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="tipoText"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tipoText2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="tipoText2"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#F2F2F2"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/defesa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ataque"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ataqueValor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/defesa"
                            android:text="ataquevalor"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Defesa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/ataqueValor"
                            android:layout_marginTop="8dp"
                            android:text="@string/defesa"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/defesaValor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/Defesa"
                            android:text="defesavalor"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Vitalidade"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_below="@id/defesaValor"
                            android:text="@string/vitalidade"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/vitalidadeValor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_below="@id/Vitalidade"
                            android:text="vitalidadevalor"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Habilidade"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/vitalidadeValor"
                            android:layout_weight="1"
                            android:text="@string/habilidade"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/habilidadeValor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_below="@id/Habilidade"
                            android:text="habilidadevalor"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#D9D9D9"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/vida_base"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vida_base"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/vida_base_valor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="vidabasevalor"
                            android:layout_below="@id/vida_base"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/energia_base"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_below="@id/vida_base_valor"
                            android:text="@string/energia_base"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/energia_base_valor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="energiabasevalor"
                            android:layout_below="@id/energia_base"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/estagio_evolutivo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/energia_base_valor"
                            android:text="@string/est_gio_evolutivo"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/estagio_evolutivo_valor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/estagio_evolutivo"
                            android:text="estagioevolutivovalor"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ritmo_evolutivo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/estagio_evolutivo_valor"
                            android:layout_marginTop="16dp"
                            android:text="@string/ritmo_evolutivo"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ritmo_evolutivo_valor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/ritmo_evolutivo"
                            android:text="ritmoevolutivovalor"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>
</LinearLayout>
